<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="30dip" >

    <LinearLayout
        android:id="@+id/firstLay"
        android:layout_width="fill_parent"
        android:layout_height="50dip" >

        <TextView
            android:id="@+id/settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txtSettings"
            android:textSize="18sp"
            android:textColor="@android:color/holo_orange_light"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@android:color/holo_orange_light" />

    <LinearLayout
        android:id="@+id/saveLay"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/save_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txtSavePhoto" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@android:color/holo_orange_light" />

    <LinearLayout
        android:id="@+id/emailLay"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txtEmail" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@android:color/holo_orange_light" />

    <LinearLayout
        android:id="@+id/opinionLay"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/opinion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txtopinion" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@android:color/holo_orange_light" />

    <LinearLayout
        android:id="@+id/termLay"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/terms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txtTerms" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@android:color/holo_orange_light" />

    <LinearLayout
        android:id="@+id/policyLay"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/policy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txtPolicy" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@android:color/holo_orange_light" />

    <LinearLayout
        android:id="@+id/logoutLay"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txtLogout" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@android:color/holo_orange_light" />

    
</LinearLayout>